--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <header class = "text-centered dark-background"> 
+  <header> 
     <h2>Ravyn Scherker Supon</h2>
     <h3>Software Developer</h3>
   </header>
