--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
        <h2><em>About Ravyn</em></h2>
          <p>Before exploring the possibilities in the tech field, I worked with victims of crime and helped clients with mental illness. Even though I enjoyed helping people one on one, I felt that my skills were better suited for problem solving and big picture development.</p>
 
-         <p>Becoming a student at <a href = "https://www.thinkful.com" target = "_blank">Thinkful<a/> gave me the opportunity to build skillsets and utilize my creativity in new and challenging ways. I am excited to take on new projects and continue to grow as a software engineer!</p>
+         <p>Becoming a student at <a href = "https://www.thinkful.com" target = "_blank">Thinkful</a> gave me the opportunity to build skillsets and utilize my creativity in new and challenging ways. I am excited to take on new projects and continue to grow as a software engineer!</p>
 
          <p>If you're searching for a new and teachable software engineer to hire, please contact me! I look forward to meeting other developers and becoming an integral part of your team.</p>
   </div>
